dark mode fix
Input components now have dark background colors (especially drop downs that were previously unreadable in dark mode)

--- a/app/globals.css
+++ b/app/globals.css
@@ -43,6 +43,10 @@
   p {
     @apply my-2
   }
+
+  select, input, textarea {
+    @apply bg-gray-100 dark:bg-slate-700
+  }
 }
 
 body {
